--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -75,7 +75,7 @@ button[type="submit"]:hover {
 .parentNavBarContainer {
     display: grid;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     grid-template: "a b c" /1fr 1fr 1fr;
     height: 10vh; /* 10% of viewport height */
@@ -294,6 +294,7 @@ Add new post styling
     margin-left: 7px;
 }
 
+
 /* ----------
 
 Below is flow styling
@@ -306,11 +307,46 @@ Below is flow styling
 }
 
 .flow > li {
-    margin-top: 1.5em;
+    margin-bottom: 1.5em;
     border: 1px solid rgba(128, 128, 128, 0.8);
     border-radius: 7px;
     padding: 1em;
     background-color: #1f1f1f;
+}
+
+.addNewPost {
+    margin-bottom: 1em !important;
+}
+
+#banderoll1 {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.397);
+    backdrop-filter: blur(15px);
+    height: 50px;
+    width: 500px;
+    z-index: 1;
+    border-radius: 5px;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+}
+
+#banderoll1 h3 {
+    margin-left: 1em;
+}
+
+.spacer {
+    width: 1px;
+    height: 10vh;
+}
+
+.stuck {
+    border-radius: 0 !important;
+    position: fixed !important;
+    top: 10vh;
+    border-right: 1px solid rgba(128, 128, 128, 0.8) !important;
+    border-left: 1px solid rgba(128, 128, 128, 0.8) !important;
 }
 
 .popupForm {
@@ -393,7 +429,7 @@ Below is flow styling
 
 .postProfile a {
     text-decoration: none;
-    color: #e1c065;
+    color: #f1dba7;
 }
 
 .postProfile .profilePic {
@@ -411,6 +447,7 @@ Below is flow styling
 .postProfileBox:hover {
     background-color: #45464a;
     transition: all 200ms ease;
+    color: #dbb84e;
 }
 
 .image {
@@ -585,7 +622,7 @@ Below is flow styling
 
 #comment .commentText a {
     text-decoration: none;
-    color: #e1c065;
+    color: #f1dba7;
     transition: all 100ms ease;
 }
 
