--- a/Project Hashtag/wwwroot/css/site.css
+++ b/Project Hashtag/wwwroot/css/site.css
@@ -332,7 +332,7 @@ Below is flow styling
     border-right: 1px solid transparent;
 }
 
-#banderoll1 h3 {
+#banderoll1 h3, #banderoll2 h3 {
     margin-left: 1em;
 }
 
@@ -349,6 +349,27 @@ Below is flow styling
 
 .hidden {
     visibility: hidden;
+}
+
+#followPrompt {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    border: none;
+    color: #c2cdcd;
+    align-items: center;
+    justify-content: center;
+    padding: 3em 0;
+}
+
+#followPrompt img{
+    width: 90px;
+}
+
+#followPrompt p {
+    font-size: 18px;
+    font-style: oblique;
+    margin-top: 1em;
 }
 
 .popupForm {
