--- a/Project Hashtag/Pages/Profile.cshtml
+++ b/Project Hashtag/Pages/Profile.cshtml
@@ -11,22 +11,19 @@
     <p>Following: <b>@Model.amountFollowing</b> Followers: <b>@Model.amountOfFollowers</b></p>
 
     <p>@Model.User.Biography</p>
-    
+
     @if (Model.User.ID != @Model.LoggedIn.LoggedInAccountID)
-	{
-		<form method="post" asp-page-handler="follow">
-			<input hidden name="userId" value="@Model.User.ID">
-			<button type="submit">@Model.FollowText</button>
-		</form>
+    {
+        <form method="post" asp-page-handler="follow">
+            <input hidden name="userId" value="@Model.User.ID">
+            <button type="submit">@Model.FollowText</button>
+        </form>
 
-	}
-else
-{
-    <a asp-page="/ProfileSettings" asp-route-userId="@accessControl.LoggedInAccountID" class="editProfileButton">Edit Profile</a>
-}
-
-
-    
+    }
+    else
+    {
+        <a asp-page="/ProfileSettings" asp-route-userId="@accessControl.LoggedInAccountID" class="editProfileButton">Edit Profile</a>
+    }
 
 </div>
 
@@ -34,8 +31,10 @@ else
 <ul class="flow">
     @foreach (var post in Model.userPosts)
     {
-        var reports = @Model.database.Reports.Where(r => Model.PeopleYouFollow.Select(p => p.UserID).Contains(r.UserID) && r.PostID == post.ID).Count();
-        var poster = Model.Users.Single(x => post.UserID == x.ID);
+        var reportedByUser = @Model.database.Reports.Any(x => x.UserID == Model.LoggedIn.LoggedInAccountID && x.PostID == post.ID);
+        var reports = @Model.database.Reports.Where(r => Model.FollowingIds.Contains(r.UserID) && r.PostID == post.ID).Count();
+        var poster = Model.User;
+
         <li>
             @if (reports == 1)
             {
@@ -50,9 +49,39 @@ else
                     <img class="pic-top" src="@poster.Avatar" alt="error">
                     <pre>@poster.Name</pre>
                 </a>
+
+                @if (reportedByUser)
+                {
+                    <label class="report reported"> <button class="popupButton"></button> </label>
+                }
+                else
+                {
+                    <label class="report"> <button class="popupButton"></button> </label>
+                }
+
                 <p>· @post.TimeSincePost()</p>
-                <form method="post" asp-page-handler="report" asp-route-id="@post.ID"> <label class="report"> <button type="submit"></button> </label></form>
             </div>
+
+            @*
+             Below is the report popup
+             *@
+            <div class="popupForm" style="display: none;">
+                @if (reportedByUser)
+                {
+                    <p>Do you want to remove your report on this post?</p>
+                }
+                else
+                {
+                    <p>Do you want to report this post?</p>
+                }
+                <form method="post" asp-page-handler="report" asp-route-id="@post.ID"> <button type="submit">Yes</button> </form>
+                <button id="closeButton">No</button>
+            </div>
+
+
+            @*
+             Adds post text, and picture if the post has one
+            *@
             <p class="postText"> @post.Description</p>
             @if (post.PictureUrl != null)
             {
@@ -60,49 +89,71 @@ else
                     <img src="@post.PictureUrl" alt="Error loading picture" />
                 </div>
             }
+
+
+            @*
+             Interaction bar conatins: like button, comment button and tag
+            *@
             <div class="interaction">
                 <form method="post" asp-page-handler="like" asp-route-id="@post.ID">
-                    <label>
-                        <button type="submit"></button>
-                        <p>@post.LikeCount</p>
-                    </label>
+                    @if (post.IsLiked(Model.LoggedIn.LoggedInAccountID, Model.database))
+                    {
+                        <label class="liked">
+                            <button type="submit"></button>
+                            <p>@post.LikeCount</p>
+                        </label>
+                    }
+                    else
+                    {
+                        <label>
+                            <button type="submit"></button>
+                            <p>@post.LikeCount</p>
+                        </label>
+                    }
                 </form>
-                <a asp-page="post" asp-route-postID="@post.ID">
+                <a asp-page="post" asp-route-postID="@post.ID" class="commentContainer">
                     <div class="comments">
                     </div>
                     <p class="commentCount">@Model.Comments.Where(x => x.PostID == post.ID).Count()</p>
                 </a>
-            </div>
 
-            <p>Comments: </p>
-            <ul>
-                @foreach (var comment in Model.Comments.Where(x => x.PostID == post.ID))
+
+                @*
+                    Adds tag if tag is not null
+                *@
+                @if (post.Tag != "" && post.Tag != null)
                 {
-
-                    <ul class="flow">
-                        <li>
-                            <div class="postProfile">
-                                <a asp-page="Profile" asp-route-userId="@comment.User.ID" class="postProfileBox">
-                                    <div class="profilePic"> </div>
-                                    <pre>@comment.User.Name</pre>
-                                </a>
-                            </div>
-                            <p>@comment.Text </p>
-                            <p>@comment.TimeSinceComment()</p>
-                            @if (comment.UserID == Model.LoggedIn.LoggedInAccountID)
-                            {
-                                <form method="post" asp-page-handler="DeleteComment" asp-route-commentId="@comment.Id">
-                                    <button type="submit">Delete</button>
-                                </form>
-                            }
-                        </li>
-                    </ul>
+                    <a asp-page="Search" class="tagContainer">
+                        <div class="tags"></div>
+                        <p>@post.Tag </p>
+                    </a>
                 }
-            </ul>
+            </div>
+            @if (@Model.Comments.Where(x => x.PostID == post.ID).Count() > 0)
+            {
+                <p class="commentSectionText">Comments: <a asp-page="post" asp-route-postID="@post.ID"> View all</a> </p>
+                @for (int j = 0; j < Math.Min(3, Model.Comments.Where(c => c.PostID == post.ID).Count()); j++)
+                {
+                    var comment = @Model.Comments.Where(c => c.PostID == post.ID).OrderByDescending(c => c.CreatedDate).ToList()[j];
+                    <div id="comment">
+                        <div class="commentProfilePic">
+                            <a asp-page="Profile" asp-route-userId="@comment.User.ID">
+                                <img src="@comment.User.Avatar" class="pic-top" />
+                            </a>
+                        </div>
+                        <div class="commentText">
+                            <a asp-page="Profile" asp-route-userId="@comment.User.ID"> @comment.User.Name</a>
+                            <p>@comment.Text </p>
+                        </div>
+                    </div>
+                    <p class="commentTime">@comment.TimeSinceComment()</p>
 
-            <form method="post" asp-page-handler="comment" asp-route-id="@post.ID">
-                <input type="text" name="content">
-                <input hidden name="userId" value="@Model.User.ID">
+                }
+            }
+            <form method="post" asp-page-handler="comment" asp-route-id="@post.ID" id="postComment">
+                <img class="pic-top" src="@Model.database.Users.Single(x => x.ID == @Model.LoggedIn.LoggedInAccountID).Avatar" alt="error">
+                <textarea required name="content" placeholder="Add a comment..." rows="1" oninput="autoExpand(this)"></textarea>
+                <input hidden name="userId" value="@post.UserID">
                 <button type="submit">Comment</button>
             </form>
 
